# clas12Tags

./: .gitignore  README.md  check_copy_config.sh  create_geometry.sh  cron_gemc_artifact_install_jlab.sh  diff.sh  rgd_run_range.xlsx  run_geometry.sh  sourceDiff.sh
ci/: binary_packages.py  binary_test_dockerfile.py  build.sh  build_gemc.sh  clas12-config-dev-gcard-list.sh  clas12-config-main-and-dev-gcard-list.sh  clas12_config_dev_main_comparison.sh  clas12_config_gcards_test.sh  detector_sqlite_dev_comparison.sh  detectors_test.sh  distros_tags.sh  dockerfile_creator.py  eff_summary.sh  env.sh  experiments_test.sh  gcard_dev_main_comparison.sh  gcard_run_test.sh  gcards_comparison.sh  gcards_dev_main.sh  gcards_devconfig_list.sh  gcards_to_test.sh  gemc_comparison.sh  geometry_comparison.sh  install_comparison_software.sh  install_fields.zsh  local_gcards_test.sh  lund_run_test.sh  manifest.sh  ntracks_metricks.sh  package_install.sh  profile_gemc.sh  report_runs_and_variations.sh  summary.sh  tags_config.sh  tracks_validation.sh  txt_sql_geometry_comparison.sh  txt_sql_run_comparison.sh  update-devmd.sh  variation_run_comparison.sh  workflows.test.sh
config/: clas12-default.gcard  clas12-default_binaryField.gcard  digi_variation.py  rga_fall2018.gcard  rga_fall2018_binaryField.gcard  rga_spring2018.gcard  rga_spring2018_binaryField.gcard  rga_spring2019.gcard  rga_spring2019_binaryField.gcard  rgb_fall2019.gcard  rgb_fall2019_binaryField.gcard  rgb_spring2019.gcard  rgb_spring2019_binaryField.gcard  rgc_binaryField.gcard  rgc_summer2022_Elmo.gcard  rgc_summer2022_Elmo_binaryField.gcard  rgc_summer2022_FTOn.gcard  rgc_summer2022_FTOn_binaryField.gcard  rgf_spring2020.gcard  rgf_spring2020_binaryField.gcard  rgk_fall2018_FTOff.gcard  rgk_fall2018_FTOff_binaryField.gcard  rgk_fall2018_FTOn.gcard  rgk_fall2018_FTOn_binaryField.gcard
geometry_source/: README.md  clas12_configuration_string.pm  gxml_to_sqlite.pl  install_coatjava.sh
source/: CMakeLists.txt  SConstruct  gemc.cc  meson.build
source/actions/: CADMesh.hh  MDetectorConstruction.cc  MEventAction.cc  MEventAction.h  MPrimaryGeneratorAction.cc  MPrimaryGeneratorAction.h  dmesg_init.cc  gemc_options.cc  meson.build
source/detector/: cad_det_factory.cc  detector.cc  detector_factory.cc  meson.build  sqlite_cad_factory.cc
source/fields/: bclas12MappedField.h  clas12BinField.cc  field.cc  mappedField.h  meson.build
source/fields/symmetries/: cartesian_3d.cc  cylindrical.cc  dipole.cc  phi-segmented.cc
source/fieldscan/: field_test.gcard  run_gemc_100.sh
source/frequencySyncSignal/: Doxyfile  README.md  example.cc  frequencySyncSignal.cc  frequencySyncSignal.h  meson.build
source/generator/: MPrimaryGeneratorAction.cc  MPrimaryGeneratorAction.h  meson.build
source/gstring/: Doxyfile  README.md  example.cc  gstring.cc  gstring.h  meson.build
source/gui/: g4dialog.cc  infos.cc  meson.build
source/gui/src/: camera_control.cc
source/hitprocess/: HitProcess_MapRegister.cc  counter_hitprocess.cc  flux_hitprocess.cc  meson.build  mirror_hitprocess.cc
source/hitprocess/GlueX/: CVRT_hitprocess.cc
source/hitprocess/HPS/: ECAL_hitprocess.cc  SVT_hitprocess.cc  muon_hodo_hitprocess.cc
source/hitprocess/bdx/: cormo_hitprocess.cc  crs_hitprocess.cc  veto_hitprocess.cc
source/hitprocess/clas12/: IC_hitprocess.cc  band_hitprocess.cc  band_hitprocess.h  cnd_hitprocess.cc  cnd_hitprocess.h  ctof_hitprocess.cc  ctof_hitprocess.h  dc_hitprocess.cc  dc_hitprocess.h  ecal_hitprocess.cc  ecal_hitprocess.h  ft_cal_hitprocess.cc  ft_hodo_hitprocess.cc  ftof_hitprocess.cc  ftof_hitprocess.h  htcc_hitprocess.cc  htcc_hitprocess.h  ltcc_hitprocess.cc  mucal_hitprocess.cc  mucal_hitprocess.h  rich_hitprocess.cc  rich_hitprocess.h  rtpc_hitprocess.cc
source/hitprocess/clas12/alert/: ahdc_hitprocess.cc  ahdc_hitprocess.h  alertshell_hitprocess.cc  atof_hitprocess.cc  atof_hitprocess.h
source/hitprocess/clas12/micromegas/: BMT_hitprocess.cc  BMT_hitprocess.h  FMT_hitprocess.cc  FMT_hitprocess.h  Lorentz.cc  Lorentz.h  bmt_strip.cc  bmt_strip.h  fmt_strip.cc  fmt_strip.h  ftm_hitprocess.cc  ftm_strip.cc
source/hitprocess/clas12/mpgd/: StripConstants.h  StripDigitizer.cc  StripDigitizer.h  muvt_hitprocess.cc  muvt_hitprocess.h  urwt_hitprocess.cc  urwt_hitprocess.h
source/hitprocess/clas12/murt/: murt_hitprocess.cc  murt_hitprocess.h  murt_strip.cc  murt_strip.h
source/hitprocess/clas12/recoil/: recoil_hitprocess.cc  recoil_strip.cc  recoil_strip.h
source/hitprocess/clas12/recoil_tof/: recoil_tof_hitprocess.cc  recoil_tof_hitprocess.h
source/hitprocess/clas12/svt/: bst_hitprocess.cc
source/hitprocess/clas12/uRwell/: uRwell_hitprocess.cc  uRwell_hitprocess.h  uRwell_strip.cc  uRwell_strip.h
source/hitprocess/eic/: eic_compton_hitprocess.cc  eic_dirc_hitprocess.cc  eic_ec_hitprocess.cc  eic_preshower_hitprocess.cc  eic_rich_hitprocess.cc
source/hitprocess/injector/: bubble_hitprocess.cc
source/materials/: cpp_materials.cc  material_factory.cc  meson.build  sqlite_materials.cc
source/meson/: ccdb.pc  clas12_cmag.pc  hipo.pc  install_fields.py  install_geant4_root_pkgconfig.py  meson.build
source/mirrors/: meson.build
source/options/: Doxyfile  README.md  example.cc  goptions.cc  goptions.h  meson.build
source/output/: gbank.cc  hipoSchemas.cc  hipoSchemas.h  hipo_output.cc  hipo_output.h  meson.build  outputFactory.cc  outputFactory.h  txt_output.h
source/parameters/: meson.build
source/physics/: GammaNuclearPhysics.cc  PhysicsList.cc  PhysicsListMessenger.cc  PhysicsListMessenger.h  meson.build
source/sensitivity/: HitProcess.cc  HitProcess.h  meson.build  sensitiveDetector.cc  sensitiveID.cc
source/src/: MDetectorConstruction.cc  MEventAction.cc  MPrimaryGeneratorAction.cc
source/subprojects/: assimp.wrap  ccdb.wrap  clas12-cmag.wrap  hipo-cpp.wrap  hipo4.wrap
source/todo_wraps/: cmag.wrap
source/translationTable/: Doxyfile  README.md  example.cc  meson.build  translationTable.cc  translationTable.h
source/utilities/: gemcOptions.cc  gemcOptions.h  gemcUtils.cc  lXDR.cc  meson.build
(+1145 files in other folders)
