cmake_minimum_required(VERSION 4.1)
project(source)

set(CMAKE_CXX_STANDARD 14)

include_directories(detector)
include_directories(fields)
include_directories(generator)
include_directories(gui/src)
include_directories(gui/src/docs)
include_directories(gui/src/images)
include_directories(gui/src/runControl)
include_directories(hitprocess)
include_directories(hitprocess/bdx)
include_directories(hitprocess/clas12)
include_directories(hitprocess/clas12/alert)
include_directories(hitprocess/clas12/micromegas)
include_directories(hitprocess/clas12/mpgd)
include_directories(hitprocess/clas12/recoil)
include_directories(hitprocess/clas12/svt)
include_directories(hitprocess/eic)
include_directories(hitprocess/GlueX)
include_directories(hitprocess/HPS)
include_directories(hitprocess/injector)
include_directories(materials)
include_directories(mirrors)
include_directories(output)
include_directories(parameters)
include_directories(physics)
include_directories(sensitivity)
include_directories(src)
include_directories(utilities)

add_executable(source
        detector/cad_det_factory.cc
        detector/cad_det_factory.h
        detector/clara_det_factory.cc
        detector/clara_det_factory.h
        detector/detector.cc
        detector/detector.h
        detector/detector_factory.cc
        detector/detector_factory.h
        detector/gdml_det_factory.cc
        detector/gdml_det_factory.h
        detector/mysql_det_factory.cc
        detector/mysql_det_factory.h
        detector/sqlite_cad_factory.cc
        detector/sqlite_cad_factory.h
        detector/sqlite_det_factory.cc
        detector/sqlite_det_factory.h
        detector/text_det_factory.cc
        detector/text_det_factory.h
        fields/symmetries/cartesian_3d.cc
        fields/symmetries/cylindrical.cc
        fields/symmetries/dipole.cc
        fields/symmetries/phi-segmented.cc
        fields/asciiField.cc
        fields/asciiField.h
        fields/bclas12MappedField.cc
        fields/bclas12MappedField.h
        fields/clas12BinField.cc
        fields/clas12BinField.h
        fields/field.cc
        fields/field.h
        fields/fieldFactory.cc
        fields/fieldFactory.h
        fields/mappedField.cc
        fields/mappedField.h
        fields/multipoleField.cc
        fields/multipoleField.h
        generator/particle.cc
        generator/particle.h
        gui/src/docs/about.h
        gui/src/docs/lund.h
        gui/src/docs/particles_color.h
        gui/src/images/aboutControl_xpm.h
        gui/src/images/cameraControl_xpm.h
        gui/src/images/detectorControl_xpm.h
        gui/src/images/dialogControl_xpm.h
        gui/src/images/g4Box_xpm.h
        gui/src/images/g4BREPSolidPCone_xpm.h
        gui/src/images/g4Cons_xpm.h
        gui/src/images/g4Copy_xpm.h
        gui/src/images/g4EllipticalTube_xpm.h
        gui/src/images/g4Operation_xpm.h
        gui/src/images/g4Sphere_xpm.h
        gui/src/images/g4Torus_xpm.h
        gui/src/images/g4Trap_xpm.h
        gui/src/images/g4Trd_xpm.h
        gui/src/images/g4Tubs_xpm.h
        gui/src/images/generatorControl_xpm.h
        gui/src/images/physicsControl_xpm.h
        gui/src/images/signalsControl_xpm.h
        gui/src/images/trigger_xpm.h
        gui/src/runControl/moc_momControls.cc
        gui/src/runControl/moc_primaryTab.cc
        gui/src/runControl/moc_run_control.cc
        gui/src/runControl/moc_vtxControls.cc
        gui/src/runControl/momControls.cc
        gui/src/runControl/momControls.h
        gui/src/runControl/primaryTab.cc
        gui/src/runControl/primaryTab.h
        gui/src/runControl/run_control.cc
        gui/src/runControl/run_control.h
        gui/src/runControl/vtxControls.cc
        gui/src/runControl/vtxControls.h
        gui/src/camera_control.cc
        gui/src/camera_control.h
        gui/src/detector_editor.cc
        gui/src/detector_editor.h
        gui/src/detector_tree.cc
        gui/src/detector_tree.h
        gui/src/g4dialog.cc
        gui/src/g4dialog.h
        gui/src/gemc_MainGui.cc
        gui/src/gemc_MainGui.h
        gui/src/gsignal.cc
        gui/src/gsignal.h
        gui/src/gtrigger.cc
        gui/src/gtrigger.h
        gui/src/infos.cc
        gui/src/infos.h
        gui/src/moc_camera_control.cc
        gui/src/moc_detector_editor.cc
        gui/src/moc_detector_tree.cc
        gui/src/moc_g4dialog.cc
        gui/src/moc_gemc_MainGui.cc
        gui/src/moc_gsignal.cc
        gui/src/moc_gtrigger.cc
        gui/src/moc_infos.cc
        gui/src/moc_physicsListGui.cc
        gui/src/physicsListGui.cc
        gui/src/physicsListGui.h
        hitprocess/bdx/cormo_hitprocess.cc
        hitprocess/bdx/cormo_hitprocess.h
        hitprocess/bdx/crs_hitprocess.cc
        hitprocess/bdx/crs_hitprocess.h
        hitprocess/bdx/veto_hitprocess.cc
        hitprocess/bdx/veto_hitprocess.h
        hitprocess/clas12/alert/ahdc_hitprocess.cc
        hitprocess/clas12/alert/ahdc_hitprocess.h
        hitprocess/clas12/alert/alertshell_hitprocess.cc
        hitprocess/clas12/alert/alertshell_hitprocess.h
        hitprocess/clas12/alert/atof_hitprocess.cc
        hitprocess/clas12/alert/atof_hitprocess.h
        hitprocess/clas12/micromegas/BMT_hitprocess.cc
        hitprocess/clas12/micromegas/BMT_hitprocess.h
        hitprocess/clas12/micromegas/bmt_strip.cc
        hitprocess/clas12/micromegas/bmt_strip.h
        hitprocess/clas12/micromegas/example.cc
        hitprocess/clas12/micromegas/FMT_hitprocess.cc
        hitprocess/clas12/micromegas/FMT_hitprocess.h
        hitprocess/clas12/micromegas/fmt_strip.cc
        hitprocess/clas12/micromegas/fmt_strip.h
        hitprocess/clas12/micromegas/ftm_hitprocess.cc
        hitprocess/clas12/micromegas/ftm_hitprocess.h
        hitprocess/clas12/micromegas/ftm_strip.cc
        hitprocess/clas12/micromegas/ftm_strip.h
        hitprocess/clas12/micromegas/Lorentz.cc
        hitprocess/clas12/micromegas/Lorentz.h
        hitprocess/clas12/mpgd/muvt_hitprocess.cc
        hitprocess/clas12/mpgd/muvt_hitprocess.h
        hitprocess/clas12/mpgd/StripConstants.h
        hitprocess/clas12/mpgd/StripDigitizer.cc
        hitprocess/clas12/mpgd/StripDigitizer.h
        hitprocess/clas12/mpgd/urwt_hitprocess.cc
        hitprocess/clas12/mpgd/urwt_hitprocess.h
        hitprocess/clas12/recoil/recoil_hitprocess.cc
        hitprocess/clas12/recoil/recoil_hitprocess.h
        hitprocess/clas12/recoil/recoil_strip.cc
        hitprocess/clas12/recoil/recoil_strip.h
        hitprocess/clas12/svt/bst_hitprocess.cc
        hitprocess/clas12/svt/bst_hitprocess.h
        hitprocess/clas12/svt/bst_strip.cc
        hitprocess/clas12/svt/bst_strip.h
        hitprocess/clas12/svt/example.cc
        hitprocess/clas12/band_hitprocess.cc
        hitprocess/clas12/band_hitprocess.h
        hitprocess/clas12/cnd_hitprocess.cc
        hitprocess/clas12/cnd_hitprocess.h
        hitprocess/clas12/ctof_hitprocess.cc
        hitprocess/clas12/ctof_hitprocess.h
        hitprocess/clas12/dc_hitprocess.cc
        hitprocess/clas12/dc_hitprocess.h
        hitprocess/clas12/ecal_hitprocess.cc
        hitprocess/clas12/ecal_hitprocess.h
        hitprocess/clas12/ecal_hitprocess_rr.cc
        hitprocess/clas12/ecal_hitprocess_rr.h
        hitprocess/clas12/ft_cal_hitprocess.cc
        hitprocess/clas12/ft_cal_hitprocess.h
        hitprocess/clas12/ft_hodo_hitprocess.cc
        hitprocess/clas12/ft_hodo_hitprocess.h
        hitprocess/clas12/ftof_hitprocess.cc
        hitprocess/clas12/ftof_hitprocess.h
        hitprocess/clas12/htcc_hitprocess.cc
        hitprocess/clas12/htcc_hitprocess.h
        hitprocess/clas12/IC_hitprocess.cc
        hitprocess/clas12/IC_hitprocess.h
        hitprocess/clas12/ltcc_hitprocess.cc
        hitprocess/clas12/ltcc_hitprocess.h
        hitprocess/clas12/rich_hitprocess.cc
        hitprocess/clas12/rich_hitprocess.h
        hitprocess/clas12/rtpc_hitprocess.cc
        hitprocess/clas12/rtpc_hitprocess.h
        hitprocess/eic/eic_compton_hitprocess.cc
        hitprocess/eic/eic_compton_hitprocess.h
        hitprocess/eic/eic_dirc_hitprocess.cc
        hitprocess/eic/eic_dirc_hitprocess.h
        hitprocess/eic/eic_ec_hitprocess.cc
        hitprocess/eic/eic_ec_hitprocess.h
        hitprocess/eic/eic_preshower_hitprocess.cc
        hitprocess/eic/eic_preshower_hitprocess.h
        hitprocess/eic/eic_rich_hitprocess.cc
        hitprocess/eic/eic_rich_hitprocess.h
        hitprocess/GlueX/CVRT_hitprocess.cc
        hitprocess/GlueX/CVRT_hitprocess.h
        hitprocess/HPS/ECAL_hitprocess.cc
        hitprocess/HPS/ECAL_hitprocess.h
        hitprocess/HPS/muon_hodo_hitprocess.cc
        hitprocess/HPS/muon_hodo_hitprocess.h
        hitprocess/HPS/SVT_hitprocess.cc
        hitprocess/HPS/SVT_hitprocess.h
        hitprocess/injector/bubble_hitprocess.cc
        hitprocess/injector/bubble_hitprocess.h
        hitprocess/counter_hitprocess.cc
        hitprocess/counter_hitprocess.h
        hitprocess/flux_hitprocess.cc
        hitprocess/flux_hitprocess.h
        hitprocess/HitProcess_MapRegister.cc
        hitprocess/HitProcess_MapRegister.h
        hitprocess/mirror_hitprocess.cc
        hitprocess/mirror_hitprocess.h
        materials/cpp_materials.cc
        materials/cpp_materials.h
        materials/material_factory.cc
        materials/material_factory.h
        materials/mysql_materials.cc
        materials/mysql_materials.h
        materials/sqlite_materials.cc
        materials/sqlite_materials.h
        materials/text_materials.cc
        materials/text_materials.h
        mirrors/mirrors_factory.cc
        mirrors/mirrors_factory.h
        mirrors/mysql_mirrors.cc
        mirrors/mysql_mirrors.h
        mirrors/sqlite_mirrors.cc
        mirrors/sqlite_mirrors.h
        mirrors/text_mirrors.cc
        mirrors/text_mirrors.h
        output/evio_output.cc
        output/evio_output.h
        output/gbank.cc
        output/gbank.h
        output/hipo_output.cc
        output/hipo_output.h
        output/hipoSchemas.cc
        output/hipoSchemas.h
        output/outputFactory.cc
        output/outputFactory.h
        output/txt_output.cc
        output/txt_output.h
        output/txt_simple_output.cc
        output/txt_simple_output.h
        parameters/mysql_parameters.cc
        parameters/mysql_parameters.h
        parameters/parameter_factory.cc
        parameters/parameter_factory.h
        parameters/text_parameters.cc
        parameters/text_parameters.h
        physics/GammaNuclearPhysics.cc
        physics/GammaNuclearPhysics.h
        physics/PhysicsList.cc
        physics/PhysicsList.h
        physics/PhysicsListMessenger.cc
        physics/PhysicsListMessenger.h
        sensitivity/backgroundHits.cc
        sensitivity/backgroundHits.h
        sensitivity/Hit.cc
        sensitivity/Hit.h
        sensitivity/HitProcess.cc
        sensitivity/HitProcess.h
        sensitivity/identifier.cc
        sensitivity/identifier.h
        sensitivity/sensitiveDetector.cc
        sensitivity/sensitiveDetector.h
        sensitivity/sensitiveID.cc
        sensitivity/sensitiveID.h
        sensitivity/voltage.C
        src/ActionInitialization.cc
        src/ActionInitialization.h
        src/cosmicMacro.C
        src/dmesg_init.cc
        src/dmesg_init.h
        src/gemc_options.cc
        src/MDetectorConstruction.cc
        src/MDetectorConstruction.h
        src/MEventAction.cc
        src/MEventAction.h
        src/MPrimaryGeneratorAction.cc
        src/MPrimaryGeneratorAction.h
        src/MSteppingAction.cc
        src/MSteppingAction.h
        src/run_conditions.cc
        src/run_conditions.h
        utilities/gemcOptions.cc
        utilities/gemcOptions.h
        utilities/gemcUtils.cc
        utilities/gemcUtils.h
        utilities/graph.cc
        utilities/graph.h
        utilities/json.hpp
        utilities/lStdHep.cc
        utilities/lStdHep.hh
        utilities/lXDR.cc
        utilities/lXDR.hh
        utilities/moc_graph.cc
        utilities/splash.h
        utilities/string_utilities.cc
        utilities/string_utilities.h
        gemc.cc)
