sub_dir_name = meson.current_source_dir().split('/').get(-1)
LD += {
    'name' : sub_dir_name,
    'sources' : files(
        'HitProcess_MapRegister.cc',
        'flux_hitprocess.cc',
        'mirror_hitprocess.cc',
        'counter_hitprocess.cc',
        'clas12/micromegas/FMT_hitprocess.cc',
        'clas12/micromegas/fmt_strip.cc',
        'clas12/micromegas/BMT_hitprocess.cc',
        'clas12/micromegas/bmt_strip.cc',
        'clas12/micromegas/ftm_hitprocess.cc',
        'clas12/micromegas/ftm_strip.cc',
        'clas12/micromegas/Lorentz.cc',
        'clas12/rtpc_hitprocess.cc',
        'clas12/svt/bst_hitprocess.cc',
        'clas12/svt/bst_strip.cc',
        'clas12/alert/atof_hitprocess.cc',
        'clas12/alert/ahdc_hitprocess.cc',
        'clas12/alert/alertshell_hitprocess.cc',
        'clas12/ctof_hitprocess.cc',
        'clas12/cnd_hitprocess.cc',
        'clas12/dc_hitprocess.cc',
        'clas12/ecal_hitprocess.cc',
        'clas12/ftof_hitprocess.cc',
        'clas12/ft_cal_hitprocess.cc',
        'clas12/ft_hodo_hitprocess.cc',
        'clas12/htcc_hitprocess.cc',
        'clas12/ltcc_hitprocess.cc',
        'clas12/rich_hitprocess.cc',
        'clas12/band_hitprocess.cc',
        'clas12/recoil/recoil_hitprocess.cc',
        'clas12/recoil/recoil_strip.cc',
        'clas12/mpgd/urwt_hitprocess.cc',
        'clas12/mpgd/muvt_hitprocess.cc',
        'bdx/cormo_hitprocess.cc',
        'bdx/veto_hitprocess.cc',
        'bdx/crs_hitprocess.cc',
        'eic/eic_compton_hitprocess.cc',
        'eic/eic_dirc_hitprocess.cc',
        'eic/eic_ec_hitprocess.cc',
        'eic/eic_preshower_hitprocess.cc',
        'eic/eic_rich_hitprocess.cc',
        'injector/bubble_hitprocess.cc',
        'HPS/ECAL_hitprocess.cc',
        'HPS/SVT_hitprocess.cc',
        'HPS/muon_hodo_hitprocess.cc'
    ),
    'headers' : files(
        'HitProcess_MapRegister.h',
        'flux_hitprocess.h',
        'mirror_hitprocess.h',
        'counter_hitprocess.h',
        'clas12/micromegas/FMT_hitprocess.h',
        'clas12/micromegas/fmt_strip.h',
        'clas12/micromegas/BMT_hitprocess.h',
        'clas12/micromegas/bmt_strip.h',
        'clas12/micromegas/ftm_hitprocess.h',
        'clas12/micromegas/ftm_strip.h',
        'clas12/micromegas/Lorentz.h',
        'clas12/rtpc_hitprocess.h',
        'clas12/svt/bst_hitprocess.h',
        'clas12/svt/bst_strip.h',
        'clas12/alert/atof_hitprocess.h',
        'clas12/alert/ahdc_hitprocess.h',
        'clas12/alert/alertshell_hitprocess.h',
        'clas12/ctof_hitprocess.h',
        'clas12/cnd_hitprocess.h',
        'clas12/dc_hitprocess.h',
        'clas12/ecal_hitprocess.h',
        'clas12/ftof_hitprocess.h',
        'clas12/ft_cal_hitprocess.h',
        'clas12/ft_hodo_hitprocess.h',
        'clas12/htcc_hitprocess.h',
        'clas12/ltcc_hitprocess.h',
        'clas12/rich_hitprocess.h',
        'clas12/band_hitprocess.h',
        'clas12/recoil/recoil_hitprocess.h',
        'clas12/recoil/recoil_strip.h',
        'clas12/mpgd/urwt_hitprocess.h',
        'clas12/mpgd/muvt_hitprocess.h',
        'bdx/cormo_hitprocess.h',
        'bdx/veto_hitprocess.h',
        'bdx/crs_hitprocess.h',
        'eic/eic_compton_hitprocess.h',
        'eic/eic_dirc_hitprocess.h',
        'eic/eic_ec_hitprocess.h',
        'eic/eic_preshower_hitprocess.h',
        'eic/eic_rich_hitprocess.h',
        'injector/bubble_hitprocess.h',
        'HPS/ECAL_hitprocess.h',
        'HPS/SVT_hitprocess.h',
        'HPS/muon_hodo_hitprocess.h'
    ),
    'additional_includes' : ['hitprocess', 'hitprocess/clas12', 'hitprocess/bdx', 'hitprocess/eic', 'hitprocess/injector', 'hitprocess/HPS'],
    'dependencies' : [qt6_deps, clhep_deps, geant4_deps, ccdb_dep],
}
